--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -438,7 +438,7 @@ ita kipengele **App** pekeyake, hii inatoa wepesi wakupangilia vipengele vinavyo
 kuliko kua na faili moja kubwa pale application inavyozidi kua kubwa usimamizi wa hilo faili 
 na ufanisi wa application kwa ujumla inakua ni changamoto.
 
-*Kumbuka tukwambwa hii inatofa fura yakutumi kipengele kimoja mara kadhaa kwa jinsi unavyo hitaji*
+*Kumbuka kwambwa hii inatoa fursa ya kutumi kipengele kimoja mara kadhaa kwa jinsi unavyo hitaji*
 
 **App.js**
 
@@ -486,16 +486,16 @@ kurudisha html badala ya kurudisha jsx na matokeo yake ni kosa lakishiri kujitok
 
 ```html
     // Hii haitafanya kazi!
-    <h1>Mambo ya kufanya Pablo Pa</h1>
+    <h1>Elimu ya Sayari na Sayansi Vimondo</h1>
     <img
-      src="" 
-      alt="pablo pa" 
+      src="https://source.unsplash.com/2W-QWAC0mzI/200x200" 
+      alt="saturn" 
       class="test"
     >
     <ul>
-       <li>Imarisha maabara
-        <li>Andaa lectures kwa ajili ya kemia
-        <li>Utafiti juu ya sayari
+       <li>Surturn ni sayari ya sita kutoka kwenye jua
+        <li>Na ya pili kwa ukubwa kwenye mfumo wa sayari
+        <li>imezungukwa na ringi
     </ul>
 ```
 
@@ -509,16 +509,16 @@ nyingine au **Fragment**
 
 ```javascript
 <>
-    <h1>Mambo ya kufanya Pablo Pa</h1>
+    <h1>Elimu ya Sayari na Sayansi Vimondo</h1>
     <img
-      src="" 
-      alt="pablo pa" 
+      src="https://source.unsplash.com/2W-QWAC0mzI/200x200" 
+      alt="saturn" 
       class="test"
     />
     <ul>
-       <li>Imarisha maabara</li>
-        <li>Andaa lectures kwa ajili ya kemia</li>
-        <li>Utafiti juu ya sayari</li>
+       <li>Surturn ni sayari ya sita kutoka kwenye jua</li>
+        <li>Na ya pili kwa ukubwa kwenye mfumo wa sayari</li>
+        <li>imezungukwa na ringi</li>
     </ul>
     </>
 ```
