--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -612,7 +612,12 @@ export default function List() {
   );
 }
 ```
+*Chukua tip conditionally render*
 
+Kunawakati utahitaji kipengele chako kionyeshe vitu tofauti kutokana na mashariti flani. 
+Kwenye react unaweza kutoa kwa **mashariti** "conditionally" jsx kwa kutumia sheria za **javascript operators**
+`if statements, &&, na ?`
+Angalia kwenye mfano huu, jinsi **javascript operators** `&&` zilivyotumika kuweka alama ya tiki (✔)
 
 
 ```
@@ -639,6 +644,16 @@ export default function List() {
 
 
 ```
+
+*Chukua tip kutoa Orotha*
+
+Kunawakati utahitaji kuonyesha vipenge vingi vinavyo fuanana kutoka katika mkusanyiko wa data,
+hapa ndipo `filter()` na `map()` zinapo ingia. Na react ita "chuja" na "kubadilisha" array ya data nakua array ya kipengele    
+
+Kwenye kila kitu cha `array` utahitaji uweke `key` **"funguo"**. Mara nying utahitaji kutumia `ID` kutoka kwenye **hifadhidata**
+kama **funguo**. Funguo zinawezesha react iweze kufuatili kila kitu kilicho wekwa kwenye orotha hatakama orotha itabadilika 
+
+
 
 
 
