--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -741,21 +741,16 @@ export function getImageUrl(mfumowajuwa) {
 }
 ```
 
-### React Arrow Function Component
+Unaweza ukasubutu kutengeneza album ya picha 
+na pale utakapo bofya kitufe cha `nyingine` unategemea
+picha ibadilike kwa sababu react inasadia kwenye mwingiliano
 
-*React kipengele cha kazi ya mkuki*
+**lakini niyaje?*
 
-Kwenye Es6 Arrow Function Component ndipo zilipo ibuka 
-ikimanisha kazi za javascript tunaweza kuzionyesha kama `lambda` "kazi ya mkuki" (arrow function) 
+<iframe src="https://codesandbox.io/embed/dank-frog-y9hs59" width="600" height="400"></iframe>
 
 
-```javascript
-const List = () => {
-  const salaam = 'Habari Arrow Function Component!';
-  return <h2>{salaam}</h2>;
-};
 
-export default List;
 ```
 *Katika hali ya kawaida mtumiaji wa hii application hana namna yoye ile
 yakuingiliana na application nakubadilisha hiyo variable ya `salaam`*
