--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -612,7 +612,7 @@ export default function List() {
   );
 }
 ```
-*Chukua dondoo conditionally render*
+
 
 Kunawakati utahitaji kipengele chako kionyeshe vitu tofauti kutokana na mashariti flani. 
 Kwenye react unaweza kutoa kwa **mashariti** "conditionally" jsx kwa kutumia sheria za **javascript operators**
@@ -645,7 +645,7 @@ export default function List() {
 
 ```
 
-*Chukua dondoo kutoa Orotha*
+
 
 Kunawakati utahitaji kuonyesha vipenge vingi vinavyo fuanana kutoka katika mkusanyiko wa data,
 hapa ndipo `filter()` na `map()` zinapo ingia. Na react ita "chuja" na "kubadilisha" array ya data nakua array ya kipengele    
@@ -745,13 +745,11 @@ Unaweza ukasubutu kutengeneza album ya picha
 na pale utakapo bofya kitufe cha `nyingine` unategemea
 picha ibadilike kwa sababu react inasadia kwenye mwingiliano
 
-**lakini niyaje?*
+*lakini niyaje?*
 
 <iframe src="https://codesandbox.io/embed/dank-frog-y9hs59" width="600" height="400"></iframe>
 
 
-
-```
 *Katika hali ya kawaida mtumiaji wa hii application hana namna yoye ile
 yakuingiliana na application nakubadilisha hiyo variable ya `salaam`*
 
