--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -750,15 +750,22 @@ picha ibadilike kwa sababu react inasadia kwenye mwingiliano
 <iframe src="https://codesandbox.io/embed/dank-frog-y9hs59" width="600" height="400"></iframe>
 
 
-*Katika hali ya kawaida mtumiaji wa hii application hana namna yoye ile
-yakuingiliana na application nakubadilisha hiyo variable ya `salaam`*
+**Data zibaki kipengele kinapotolewa tena**
+
+**React iweze kutoa tena kipengele kikiwa na data**
 
 
 vipengele vyote tulivyo viona mpaka sasa havina hali **state** au kitaalamu tunasema ni **stateless component**
 vinapokea kilichojanzwa kama **props** nakukitoa kama **jsx**, na hii inawezekana kama kilichojanzwa kipo kama **props**
 aina hii ya vipengele hua haifiki hifadhi iliyo kuwepo kwenye kivinjari
 mara nyingi vitu vingine kwenye screen hubadilika kutokana na kile alichojaza mtumiaji na hapa ndipo
-React hooks zipo kua natija kwani tunaweza kutumia hali **state** kwenye **Function Components**
+**React hooks** zipo kua natija kwani tunaweza kutumia hali **state** kwenye **Function Components**
+
+Kwa kutumia ndoana **hooks** kwenye react tunaweza kutatua hii changamota 
+
+**kuweza kuhifadhi data pale kipengele kinapotolewa tena** 
+
+**react iweze kutoa data mpya pale kipengele kinapo tolewa tena**
 
 
 ```javascript
