--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -768,6 +768,14 @@ Kwa kutumia ndoana **hooks** kwenye react tunaweza kutatua hii changamota
 **react iweze kutoa data mpya pale kipengele kinapo tolewa tena**
 
 
+
+<iframe src="https://codesandbox.io/p/strange-cdn-896mfq" width="600" height="400"></iframe>
+
+
+
+
+
+
 ```javascript
 import React, { useState } from "react";
 const List = () => {
@@ -954,6 +962,18 @@ export default App;
 This is a beautiful iframe:
 
 <iframe src="https://codesandbox.io/embed/lingering-river-knq4gs" width="600" height="400"></iframe>
+
+
+
+
+
+
+>
+
+
+
+
+
 
 This is a beautiful iframe: is this what you want 
 
