--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -769,7 +769,7 @@ Kwa kutumia ndoana **hooks** kwenye react tunaweza kutatua hii changamota
 
 
 
-<iframe src="https://codesandbox.io/p/strange-cdn-896mfq" width="600" height="400"></iframe>
+<iframe src="https://codesandbox.io/embed/strange-cdn-896mfq" width="600" height="400"></iframe>
 
 
 
