--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -913,17 +913,17 @@ nakuwa
 const [index, setIndex] = useState(0);
 ```
 
-**index** ni kumbukumbu ya hali **setIndex** nikazi ya kuweka
-unapo ita `useState` unataka react ikumbuke kitu nahapa ni `index`
+`index` ni kumbukumbu ya **hali**. `setIndex` **nikazi ya kuweka**.
+Unapo ita `useState` unataka react ikumbuke kitu nahapa ni `index`
 
-Kwa kawaida pair hizi huandikwa  `const [kitu, setwekakitu]`
+Kwa kawaida pair hizi huandikwa  `const [kitu, setKitu]`
 
 nahayo mabano `[  ]` ni sheria zinazojulikana kama **array destructuring** zinatuwezesha kusoma thamani kwenye array,
 array inayo rudishwa na `useState` ina hivyo vitu viwili.
 
 
 
-Nahivi ndivyo zinavyo fanya kazi kwa paboja kwenye hii kazi inayo shughulikia kubofya
+Nahivi ndivyo zinavyo fanya kazi kwa paboja kwenye hii **kazi inayo shughulikia kubofya**
 
 ```javascript
 function handleClick() {
