--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -8,7 +8,7 @@ trending: false
 topPick: false
 popular: true
 ---
-
+*Kama ukiuliza ni react bila machozi 101 nyenzo na vipengele ticksheet, usanidi kunt.*
 kasi ya ukuwaji wa technology imeleta mapinduzi ya hali ya juu ya jinsi ambavyo tuna
 sambaza na kuendesha application, Katika hali ya kawaida waendelezaji hutengeza application kwa kutumia 
 computer zao na huhitaji kuhifadhi hizo application kwenye server flani ili watumiaji kwenye mtandao wa internet waweza kuifikia.
@@ -741,6 +741,10 @@ export function getImageUrl(mfumowajuwa) {
 }
 ```
 
+###State Componets 
+
+**Hali:kumbukumbu kwenye kipengele**
+
 Unaweza ukasubutu kutengeneza album ya picha 
 na pale utakapo bofya kitufe cha `nyingine` unategemea
 picha ibadilike kwa sababu react inasadia kwenye mwingiliano
@@ -931,7 +935,7 @@ function handleClick() {
 }
 ```
 
-Kwa mabadiliko hayo kubofya Nyingine kunatakiwa kuonyeshe picha nyingine 
+Kwa mabadiliko hayo kubofya kitufe `Nyingine` kunatakiwa kuonyeshe picha nyingine 
 
 
 <iframe src="https://codesandbox.io/embed/strange-cdn-896mfq" width="600" height="400"></iframe>
@@ -950,8 +954,8 @@ nakuendelea
 
 
 Unaweza kuwa na kumbukumbu **varible** ya hali zaidi ya moja kama hali hazihusiani, 
-angali jinsi ni navyo ongeza **kumbukumbu** nyingine ya hali kwajili yakuonyesha zaidi.
-pale mtumiaji atakapo bofya kitufe cha kusoma zaidi
+angali jinsi ni navyo ongeza **kumbukumbu** nyingine ya hali kwajili yakuonyesha taarifa zingine.
+pale mtumiaji atakapo bofya kitufe cha `zaidi`
 
 
 
@@ -997,7 +1001,16 @@ export default function List() {
 
 ```
 
+Kwenye sandbox hii nimeongeza kitufe chakurudi Nyuma
 
+
+Mpaka hapa tulipo fikia umeona mbinu za kisasa tunazotumia
+kwenye kuandika na kuendeleza application mawinguni mchakato 
+mzima wa bomba la undelaziji CD/CI github na vercel. 
+
+Tumeitafuna react kuanzia kwenye Dom mpaka kwenye ndoana za hali kwenye kipengele,
+Tumetoa vipengele kwa masharti na kwa orotha.  Mzoezi ndiyo yatakayo
+kufanya bora endelea ku react, *code mnono*
 
 
 
