--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -55,7 +55,7 @@ Nibure kwa ajili ya sites za hobby na ambazo hazipo kibiyashara.
 Una weza sambaza kutokea kwenye **CLI**, **GitLab**, **Bitbucket**, au kutokea kwenye **Git**, 
 kwenye makala haya tutatokea **git** kwaku tumia account ya **github**
 
-**Github** kwa juu juu ni zaidi ya mtandao wa kijamii kwa waendelezaji, tovuti na huduma ya mawinguni ambayo ina wa saidia wa endelazaji
+**Github** kwa juu juu ni zaidi ya mtandao wa kijamii kwa waendelezaji/wasanidi, tovuti na huduma ya mawinguni ambayo ina wa saidia wasanidi
 wa hifadhi na kutawala code zao kwenye hazina za git, kufuatilia na kudhibiti mabadiliko kwenye code,
 hakiki code kama mtaalamu, wezesha mchakato wa CI/CD na mtririko wa kazi za DevOps
 hususani ina msaidia mtu mmoja mmoja na timu kutumia git kwa udhibiti wa toleo na ushirikiano.
