--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -316,7 +316,7 @@ kuweka kwenye **DOM** tunatumia `document.getElementById('root')` msisitizo ukiw
 
 Ili kuweza kukiona hicho kipengele nakili **"copy"** link ya hazina yako alafu uchanja mbuga na kivinjari chako hadi **Vercel** hapa ndipo tutakapo endeshea **code** zetu inaingiliana vizuri sana na bomba la kuendeleza usambazaji la **Github**  
 
-Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho andikwa **new repo** alafu nita **bofya impor git repository** naku **paste** ile **link** ya **hazina** yangu kwa vile ni mara ya kwanza intanilazimu ni **install** app ya **Vercel**, github. Ili kuipa uwezo **vercel** kusoma na kuandika kwenye **hathina** zangu za **Github** angalia hapa 
+Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho andikwa **new repo** alafu nita **bofya impor git repository** naku **paste** ile **link** ya **hazina** yangu kwa vile ni mara ya kwanza intanilazimu ni **install** app ya **Vercel**, github. Ili kuipa uwezo **vercel** kusoma na kuandika kwenye **hazina** zangu za **Github** angalia hapa 
 
 
 ![vercel_app_ins](https://i.ibb.co/ZcV17wS/Install-vercel1.jpg)
