--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -337,6 +337,8 @@ Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho an
 Bilashaka umefanikiwa kuona **kipengele** cha **react** kikipachikwa kwenye **HTML DOM** na kikitolewa kwenye **kivinjari** chako
 umeona mnyororo wa bomba la upelekeji na uendlezaji application upande-wambele.
 
+Chanzo cha code hapa (https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/main)
+
 Ngoja kidogo siyo haraka kihivyo...tunachangamoto kwenye code sijasema **bug**
 nyenzo tuliyo tumia **ReactDOM** njia hii ni yakizamiani na taratibu, uzamani labda si yo 
 hoja sana lakini kwenye utaratib hapa kuna ukakasi utaribu wenye haswa
