--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -337,7 +337,7 @@ Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho an
 Bilashaka umefanikiwa kuona **kipengele** cha **react** kikipachikwa kwenye **HTML DOM** na kikitolewa kwenye **kivinjari** chako
 umeona mnyororo wa bomba la upelekeji na uendlezaji application upande-wambele.
 
-Chanzo cha code hapa (https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/main)
+[Chanzo cha code hapa](https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/main)
 
 Ngoja kidogo siyo haraka kihivyo...tunachangamoto kwenye code sijasema **bug**
 nyenzo tuliyo tumia **ReactDOM** njia hii ni yakizamiani na taratibu, uzamani labda si yo 
@@ -410,6 +410,9 @@ tawi **kuu** "main" halitakuwa na utofauti na lile la **dev**
 Baada ya **DOM** kutubainikia na **JSX** kujitokeza ingependeza kama tunge viangalia vipengele vya react 
 kwa ndani kidogo ilikuweza kuelewa dhana na kuitumia React kwa ufasaha kwenye kuendeleza au kujenga
 **vipengela anavyo ingiliana navyo mtumiaji** kwa maana ya **"user interfaces" (UI)** kwenye muktadha huu.
+
+[Chanzo cha code hapa](https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/dev)
+
 
 ### React Function Component
 
