--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -337,7 +337,10 @@ Baada ya kuingia ndani na account ya **github** nita **bofya** kitufe kilicho an
 Bilashaka umefanikiwa kuona **kipengele** cha **react** kikipachikwa kwenye **HTML DOM** na kikitolewa kwenye **kivinjari** chako
 umeona mnyororo wa bomba la upelekeji na uendlezaji application upande-wambele.
 
-**Chanzo cha code:** [https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/main]
+Chanzo cha code [https://stackoverflow.com][chanzo cha code]
+
+[Chanzo cha code]: https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/main
+
 
 Ngoja kidogo siyo haraka kihivyo...tunachangamoto kwenye code sijasema **bug**
 nyenzo tuliyo tumia **ReactDOM** njia hii ni yakizamiani na taratibu, uzamani labda si yo 
@@ -411,7 +414,7 @@ Baada ya **DOM** kutubainikia na **JSX** kujitokeza ingependeza kama tunge viang
 kwa ndani kidogo ilikuweza kuelewa dhana na kuitumia React kwa ufasaha kwenye kuendeleza au kujenga
 **vipengela anavyo ingiliana navyo mtumiaji** kwa maana ya **"user interfaces" (UI)** kwenye muktadha huu.
 
-**Chanzo cha code:** [https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/dev]
+**Chanzo cha code:** (https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/dev)
 
 
 ### Jaribio
