--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -414,18 +414,11 @@ Baada ya **DOM** kutubainikia na **JSX** kujitokeza ingependeza kama tunge viang
 kwa ndani kidogo ilikuweza kuelewa dhana na kuitumia React kwa ufasaha kwenye kuendeleza au kujenga
 **vipengela anavyo ingiliana navyo mtumiaji** kwa maana ya **"user interfaces" (UI)** kwenye muktadha huu.
 
-**Chanzo cha code:** (https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/dev)
+Chanzo cha code [https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/dev][chanzo cha code]
 
 
-### Jaribio
 
-This [website] is awesome.
 
-You will never use anything else than this [website].
-
-Check out [https://stackoverflow.com][website] for more fun.
-
-[website]: https://stackoverflow.com
 
 
 ### React Function Component
