--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -339,6 +339,8 @@ umeona mnyororo wa bomba la upelekeji na uendlezaji application upande-wambele.
 
 Chanzo cha code [https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/main]
 
+[chanzo cha code]: https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/main
+
 
 
 
