--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -421,6 +421,15 @@ Chanzo cha code [https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree
 
 
 
+Moja kati ya majukwaa ambayo unaweza ukaanzisha na kuendleza usaninidi kwa haraka ni **Codesanbox**
+nayo ina ingiliania vizuri sana na bomba la unedelezaji la github ni moja kati ya majukwaa ya uwendelezaji
+wa application ambayo kama developer huna sababu yakuto jaribu. Mpaka hapa ulipofikia hongera! kwani sasa
+tutakwenda moja kwa moja nakutumia **codesandbox** wakati tunajifunza react kwa undani 
+
+
+
+<iframe src="https://codesandbox.io/embed/p/github/devhabari101/react-hatuwa-ya-kwanza-dom/dev" width="600" height="400"></iframe>
+
 
 
 
