--- a/content/technology/javascript/post.mdx
+++ b/content/technology/javascript/post.mdx
@@ -408,8 +408,11 @@ Kuunganisha **"Merge"** uta bofya hicho kitufe kilicho andikwa **Merge pull requ
 ![github_mergpull_req](https://i.ibb.co/qBp6ckH/github-merge-pull-req.png)
 
 
-**thibitisha kuunganisha na mara baada ya kuthibisha ukirudi kwenye code ukiwa kwenye 
+**thibitisha** kuunganisha na mara baada ya kuthibisha ukirudi kwenye code ukiwa kwenye 
 tawi **kuu** "main" halitakuwa na utofauti na lile la **dev**
+
+
+Chanzo cha code [https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/dev][chanzo cha code]
 
 
 
@@ -417,25 +420,19 @@ Baada ya **DOM** kutubainikia na **JSX** kujitokeza ingependeza kama tunge viang
 kwa ndani kidogo ilikuweza kuelewa dhana na kuitumia React kwa ufasaha kwenye kuendeleza au kujenga
 **vipengela anavyo ingiliana navyo mtumiaji** kwa maana ya **"user interfaces" (UI)** kwenye muktadha huu.
 
-Chanzo cha code [https://github.com/devhabari101/react-hatuwa-ya-kwanza-dom/tree/dev][chanzo cha code]
 
 
+Mpaka hapa ulipofikia hongera! kwani sasa tutakwenda moja kwa moja nakutumia **codesandbox** wakati tunajifunza react kwa undani 
 
 Moja kati ya majukwaa ambayo unaweza ukaanzisha na kuendleza usaninidi kwa haraka ni **Codesanbox**
 nayo ina ingiliania vizuri sana na bomba la unedelezaji la github ni moja kati ya majukwaa ya uwendelezaji
-wa application ambayo kama developer huna sababu yakuto jaribu. Mpaka hapa ulipofikia hongera! kwani sasa
-tutakwenda moja kwa moja nakutumia **codesandbox** wakati tunajifunza react kwa undani 
-
+wa application ambayo kama developer huna sababu yakuto tumia. 
 
 
 <iframe src="https://codesandbox.io/p/github/devhabari101/react-hatuwa-ya-kwanza-dom/dev" width="600" height="400"></iframe>
 
 
 
-
-
-
-<iframe src="https://codesandbox.io/embed/dank-frog-y9hs59" width="600" height="400"></iframe>
 
 
 
